# my_infer

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.8D28A315986D85E2.idx  tensor.cpp.8C451DFD03A179F7.idx  tensor.cpp.C825CF5DAB67DFEF.idx  tensor.hpp.F718DCF1677DC59B.idx  tensor_util.hpp.9B090EA5567AADEE.idx  test_create_tensor.cpp.A8AF38099C237EA3.idx
include/data/: tensor.hpp  tensor_util.hpp
source/data/: tensor.cpp
test/: test_create_tensor.cpp
